--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-output-manifest": "^2.0.0",
+    "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
@@ -24,6 +26,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "sirv-cli": "^2.0.0"
   }
 }
