--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.5.2
 Django==4.1
 django-browser-reload==1.6.0
+django-debug-toolbar==3.6.0
+django-extensions==3.2.1
 django-htmx==1.12.2
+django-render-block==0.9.1
+django-widget-tweaks==1.4.12
+Pillow==9.2.0
 sqlparse==0.4.2
