--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "autoprefixer": "^10.4.8",
+    "leaflet": "^1.9.1",
     "postcss": "^8.4.16",
     "postcss-load-config": "^3.1.4",
     "rollup": "^2.3.4",
@@ -23,6 +24,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-leafletjs": "^0.9.0",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.8"
   },
