--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.0",
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "autoprefixer": "^10.4.8",
     "leaflet": "^1.9.1",
@@ -29,7 +30,15 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "@elfalem/leaflet-curve": "^0.9.1",
+    "@turf/turf": "^6.5.0",
     "axios": "^0.27.2",
-    "sirv-cli": "^2.0.0"
+    "d3-dsv": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "just-flush": "^2.2.1",
+    "sirv-cli": "^2.0.0",
+    "svelte-watch-resize": "^1.0.3",
+    "topojson-client": "^3.1.0",
+    "topojson-server": "^3.0.1"
   }
 }
