--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ django-htmx==1.12.2
 django-render-block==0.9.1
 django-widget-tweaks==1.4.12
 Pillow==9.2.0
+psycopg2==2.9.5
+pytz==2022.4
 sqlparse==0.4.2
+celery==4.4.1
+redis==3.4.1
