--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,18 @@ services:
     ports:
       - "5432:5432"
 
+  pg_admin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=my_awesome_email@email.com
+      - PGADMIN_DEFAULT_PASSWORD=does_not_matter
+    depends_on:
+      - db
+
   redis:
     image: redis:alpine
     container_name: redis
