use s3 for media files in production

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@ DB_PASS=changeme
 SECRET_KEY=changeme
 ALLOWED_HOSTS=127.0.0.1
 ELASTICSEARCH_DSL_HOSTS=es:9200
+
+AWS_ACCESS_KEY_ID="get_from_aws"
+AWS_SECRET_ACCESS_KEY="get_from_aws"
+AWS_STORAGE_BUCKET_NAME="get_from_aws"
