--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
+    env_file:
+      - .env
     volumes:
       - ./mysite:/mysite
       - ./data/web:/vol/web
