--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,18 @@
 {
+    "version": "0.2.0",
     "configurations": [
         {
-            "name": "Docker: Python - Django",
-            "type": "docker",
-            "request": "launch",
-            "preLaunchTask": "docker-run: debug",
-            "python": {
-                "pathMappings": [
-                    {
-                        "localRoot": "${workspaceFolder}/mysite",
-                        "remoteRoot": "/mysite"
-                    }
-                ],
-                "projectType": "django"
-            }
+            "name": "Run Django",
+            "type": "python",
+            "request": "attach",
+            "pathMappings": [
+                {
+                    "localRoot": "${workspaceFolder}/mysite",
+                    "remoteRoot": "/mysite"
+                }
+            ],
+            "port": 3000,
+            "host": "127.0.0.1",
         }
     ]
 }
