--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
+      - 3000:3000 # debugging service (debugpy)
+    # stdin_open: true
+    # tty: true
     env_file:
       - .env
     volumes:
