--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ billiard==3.6.4.0
 boto3==1.26.3
 botocore==1.29.3
 celery==4.4.1
+debugpy==1.6.3
 Django==4.1
 django-browser-reload==1.6.0
 django-debug-toolbar==3.6.0
