--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@elfalem/leaflet-curve": "^0.9.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@turf/turf": "^6.5.0",
     "axios": "^0.27.2",
     "d3-dsv": "^3.0.1",
