--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ billiard==3.6.4.0
 boto3==1.26.3
 botocore==1.29.3
 celery==4.4.1
+crispy-tailwind==0.5.0
 debugpy==1.6.3
 Django==4.1
 django-browser-reload==1.6.0
+django-crispy-forms==1.14.0
 django-debug-toolbar==3.6.0
 django-extensions==3.2.1
 django-htmx==1.12.2
