--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,5 @@ six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.12
 vine==1.3.0
+django-taggit==3.1.0 # taggit
+djangorestframework==3.14.0 # djangorestframework
