--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ billiard==3.6.4.0
 boto3==1.26.3
 botocore==1.29.3
 celery==4.4.1
+Cerberus==1.3.4 # kolo
+click==8.1.3 # kolo
 crispy-tailwind==0.5.0
 debugpy==1.6.3
 Django==4.1
@@ -18,6 +20,7 @@ django-render-block==0.9.1
 django-storages==1.13.1
 django-widget-tweaks==1.4.12
 jmespath==1.0.1
+kolo==2.2.1 # kolo
 kombu==4.6.11
 pilkit==2.0
 Pillow==9.2.0
@@ -27,7 +30,9 @@ pytz==2022.4
 redis==3.4.1
 s3transfer==0.6.0
 six==1.16.0
-sqlparse==0.4.2
+tomli==2.0.1 # kolo
+toolz==0.12.0 # kolo
+ulid-py==1.1.0 # kolo
 urllib3==1.26.12
 vine==1.3.0
 django-taggit==3.1.0 # taggit
