--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,42 @@
-amqp==2.6.1
-asgiref==3.5.2
-billiard==3.6.4.0
-boto3==1.26.3
-botocore==1.29.3
-celery==4.4.1
+amqp==2.6.1 # django-storages - s3 bucket
+asgiref==3.5.2 # django?
+billiard==3.6.4.0 # django-storages - s3 bucket
+boto3==1.26.3 # django-storages - s3 bucket
+botocore==1.29.3 # django-storages - s3 bucket
+celery==4.4.1 # celery
 Cerberus==1.3.4 # kolo
 click==8.1.3 # kolo
-crispy-tailwind==0.5.0
-debugpy==1.6.3
-Django==4.1
-django-appconf==1.0.5
-django-browser-reload==1.6.0
-django-crispy-forms==1.14.0
-django-debug-toolbar==3.6.0
-django-extensions==3.2.1
-django-htmx==1.12.2
-django-imagekit==4.1.0
-django-render-block==0.9.1
-django-storages==1.13.1
-django-widget-tweaks==1.4.12
-jmespath==1.0.1
+crispy-tailwind==0.5.0 # crispy-tailwind
+debugpy==1.6.3 # debugpy - enables debugging with docker
+Django==4.1 # django
+django-appconf==1.0.5 # django-imagekit
+django-browser-reload==1.6.0 # django-browser-reload
+django-crispy-forms==1.14.0 # django-crispy-forms
+django-debug-toolbar==3.6.0 # django-debug-toolbar
+django-extensions==3.2.1 # django-extensions
+django-htmx==1.12.2 # django-htmx
+django-imagekit==4.1.0 # django-imagekit
+django-render-block==0.9.1 # django-render-block
+django-storages==1.13.1 # django-storages - s3 bucket
+django-widget-tweaks==1.4.12 # django-widget-tweaks
+factory-boy==3.2.1 # factory-boy
+Faker==15.3.2 # factory-boy
+jmespath==1.0.1 # django-storages - s3 bucket
 kolo==2.2.1 # kolo
-kombu==4.6.11
-pilkit==2.0
-Pillow==9.2.0
-psycopg2==2.9.5
-python-dateutil==2.8.2
-pytz==2022.4
-redis==3.4.1
-s3transfer==0.6.0
-six==1.16.0
+kombu==4.6.11 # django-storages - s3 bucket
+pilkit==2.0 # django-imagekit
+Pillow==9.2.0 # pillow - required for image processing by imagekit & django
+psycopg2==2.9.5 # psycopg2 - postgres
+python-dateutil==2.8.2 # python-dateutil
+pytz==2022.4 # psycopg2
+redis==3.4.1 # celery
+s3transfer==0.6.0 # django-storages - s3 bucket
+six==1.16.0 # celery?
+sqlparse==0.4.2 # postgres
 tomli==2.0.1 # kolo
 toolz==0.12.0 # kolo
 ulid-py==1.1.0 # kolo
-urllib3==1.26.12
-vine==1.3.0
+urllib3==1.26.12 # celery?
+vine==1.3.0 # celery
 django-taggit==3.1.0 # taggit
 djangorestframework==3.14.0 # djangorestframework
