--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ redis==3.4.1
 celery==4.4.1
 urllib3==1.26.12
 vine==1.3.0
-six==1.16.0
+six==1.16.0 # also channels
 # postgres
 psycopg2==2.9.5
 sqlparse==0.4.2
@@ -67,3 +67,24 @@ python-dateutil==2.8.2
 django-taggit==3.1.0 
 # djangorestframework
 djangorestframework==3.14.0 
+# channels
+attrs==22.2.0
+autobahn==23.1.1
+Automat==22.10.0
+cffi==1.15.1
+channels==3.0.5 # later versions do not function
+constantly==15.1.0
+cryptography==39.0.0
+daphne==3.0.2
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==23.0.0
+service-identity==21.1.0
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.4.0
+zope.interface==5.5.2
